--- a/assets/styles.css
+++ b/assets/styles.css
@@ -10,7 +10,7 @@
 } 
 
 :root {
-    --gold: rgb(221, 171, 94);
+    --primary-bgcolor: #F6EFEB;
     --bronze: rgb(160, 132, 99);
     --charcoal: rgb(66, 71, 84);
     --blue: rgb(7, 122, 153);
@@ -25,7 +25,7 @@
 
 body {
     font-family: var(--primary-font);
-    background-color: var(--goldTint);
+    background-color: var(--primary-bgcolor);
 }
 
 .video-container {
@@ -55,23 +55,33 @@ nav {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    height: 120px;
+
 }
 
 nav a {
     color: white;
-    padding: 14px 16px;
+    padding: 5px;
     text-decoration: none;
     font-family: var(--system-font);
     font-size: 1.5rem;
 }
 
 nav a:hover {
-    background-color: var(--goldTint);
-    color: var(--charcoal);
+    font-weight: bolder;
 }
 
-nav a.active {
-    border: 3px solid var(--gold);
+.dropdown-item {
+    display: none;
+}
+
+.dropdown-item a {
+    display: block;
+}
+
+.dropdown:hover .dropdown-item{
+    display: block;
+    position: absolute;
 }
 
 #video-message {
@@ -85,11 +95,13 @@ nav a.active {
 #home-title h1 {
     font-family: var(--special-font);
     font-size: 5rem;
+    margin-bottom: 0;
 }
 
 #home-title h2 {
   font-family: var(--primary-font);
   font-size: 3rem;
+  margin: 20px 0;
 }
 
 #home-title button {
@@ -101,12 +113,26 @@ nav a.active {
     border: 0;
 }
 
-main {
+#home-main1 {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
-    margin: 3vw;
-    min-height: calc(100vh - 338px);
+    justify-content: space-around;
+    text-align: center;
+}
+
+#home-main1 h2 {
+    font-size: 3rem;
+}
+
+#home-main1 div {
+    margin: 10px 20px;
+}
+
+#home-main1 img {
+    max-height: 300px;
+    min-height: 100px;
+    max-width: 300px;
+    min-width: 100px;
 }
 
 .main-content {
