--- a/assets/styles.css
+++ b/assets/styles.css
@@ -336,6 +336,43 @@ button:hover {
     opacity: 0.7;
 }
 
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: black; /*fallback color */
+    background-color: rgb(0,0,0, 0.7);
+}
+
+#wechat-modal-content {
+    background-color: white;
+    position: relative;
+    width: fit-content;
+    padding: 20px;
+    margin: auto;
+    text-align: center;
+}
+
+#wechat-modal p {
+    font-family: var(--system-font);
+}
+
+#wechat-modal img {
+    border: 1px solid black;
+}
+
+#wechat-modal .close-btn {
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
 footer {
     background-color: black;
 }
