--- a/assets/styles.css
+++ b/assets/styles.css
@@ -161,6 +161,7 @@ nav a:hover {
 
 #home-main1 img {
     max-width: 300px;
+    object-fit:cover;
 }
 
 #home-main2 {
@@ -202,6 +203,10 @@ nav a:hover {
 
 #home-main3-1 {
     flex: 1 1 40%;
+    background-image: url(../images/shot03.jpg);
+    background-size: cover;
+    background-position: center;
+    border-radius: 80px;
 }
 
 #home-main3-2 {
@@ -214,9 +219,9 @@ nav a:hover {
 
 #home-main3 img {
     border-radius: 80px;
-    aspect-ratio: 1/1;
     object-fit: cover;
-    max-width: 100%
+    max-width: 100%; 
+    height: 100%;
 }
 
 #home-main3-2 h2 {
@@ -248,6 +253,7 @@ nav a:hover {
 #home-main5 {
     background-image: url("../images/shot05.jpg");
     background-size: cover;
+    background-position: center;
     height: 720px;
     display: flex;
     align-items: flex-end;
