--- a/assets/styles.css
+++ b/assets/styles.css
@@ -159,9 +159,12 @@ nav a:hover {
     margin: 10px 20px;
 }
 
-#home-main1 img {
+#home-main1-right {
+    flex: 1 1;
     max-width: 300px;
-    object-fit:cover;
+    background-image: url(../images/shot01.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 #home-main2 {
@@ -215,13 +218,6 @@ nav a:hover {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-}
-
-#home-main3 img {
-    border-radius: 80px;
-    object-fit: cover;
-    max-width: 100%; 
-    height: 100%;
 }
 
 #home-main3-2 h2 {
