--- a/assets/styles.css
+++ b/assets/styles.css
@@ -325,6 +325,7 @@ nav .dropdown a:hover {
     font-family: var(--system-font);
     color: white;
     font-size: 1.5rem;
+    font-weight: bold;
     margin-bottom: 5px;
 }
 
