--- a/assets/contact.css
+++ b/assets/contact.css
@@ -5,14 +5,15 @@ section {
 }
 
 body {
-    font-family: var(--system-font);
     font-size: 1.2rem;
 }
 
 h3 {
-    font-family: var(--primary-font);
     font-size: 2rem;
-    font-weight: 100;
+}
+
+#contact-info {
+    color: var(--dark-color4);
 }
 
 .flex-row div {
