--- a/assets/styles.css
+++ b/assets/styles.css
@@ -14,11 +14,6 @@
 } 
 
 @font-face { 
-    font-family: 'Moon-Time'; 
-    src: url('moon-time-regular.ttf'); 
-} 
-
-@font-face { 
     font-family: 'Kingred-Modern'; 
     src: url('kingred.otf'); 
 } 
@@ -28,37 +23,36 @@
     --secondary-bgcolor: #EED7C1;
     --light-bgcolor: #F7F6F6;
     --dark-color: #2D3640;
-    --primary-color: #2d3640;
-    --charcoal: rgb(66, 71, 84);
-    --blue: rgb(7, 122, 153);
-    --goldShade: rgb(208, 139, 32);
-    --goldTint: rgb(238, 213, 174);
-    --blueTint: rgb(148, 178, 191);
-    --primary-font: "Sorts Mill Goudy", serif;
+    --dark-color2: #474132;
+    --dark-color3: #262728;
+    --dark-color4: #2b2723;
     --system-font: "Glacial-Indifference", sans-serif;
-    --special-font: "Moon-Time", cursive;
+    --title-font: "Sorts Mill Goudy", serif;
     --emphasis-font: "Kingred-Modern", cursive;
-    --secondary-font: "Calibri";
 }
 
 body {
-    font-family: var(--primary-font);
+    font-family: var(--system-font);
     background-color: var(--primary-bgcolor);
     font-weight: 100;
     color: var(--dark-color);
 }
-button {
-    font-family: var(--system-font);
-    color: var(--dark-color);
-}
 
 h1, h2, h3, h4 {
-    font-family: var(--primary-font);
+    font-family: var(--title-font);
     font-weight: 100;    
 }
 
 h2 {
     font-size: 3rem;
+}
+
+button {
+    color: var(--dark-color);
+}
+
+button:hover {
+    opacity: 0.7;
 }
 
 a {
@@ -69,24 +63,7 @@ a {
 #header {
     background-image: url(../images/background.jpg);
     background-size: cover;
-}
-
-#header, .video-container {
     position: relative;
-}
-
-.video-container video {
-    object-fit: cover;
-    width: 100%;
-    height: 600px;
-}
-
-#video-message {
-    color: white;
-    position: absolute;
-    width: 100%;
-    top: 0;
-    pointer-events: none;
 }
 
 #home-logo {
@@ -101,14 +78,11 @@ nav {
     flex-wrap: wrap;
     justify-content: space-evenly;
     height: 120px;
-
 }
 
 nav a {
     color: white;
     padding: 5px;
-/*    text-decoration: none; */
-    font-family: var(--system-font);
     font-size: 1.5rem;
 }
 
@@ -133,30 +107,6 @@ nav .dropdown a:hover {
     pointer-events: all;
 }
 
-#home-title {
-    text-align: center;
-}
-
-#home-title h1 {
-    font-family: var(--special-font);
-    font-size: 5rem;
-    font-weight: 100;
-    margin-bottom: 0;
-}
-
-#home-title h2 {
-  margin: 20px 0;
-}
-
-#home-title button {
-    height: 60px;
-    font-size: 1rem;
-    padding: 2px 16px;
-    border-radius: 10px;
-    border: 0;
-    pointer-events: all;
-}
-
 #page-header {
     height: 200px;
 }
@@ -164,7 +114,7 @@ nav .dropdown a:hover {
 #page-header h1 {
     padding: 5% 0 0 5%;
     font-family: var(--emphasis-font);
-    color: white;
+    color: var(--light-bgcolor);
     font-size: 4rem;
     font-weight: 100;
 }
@@ -172,184 +122,6 @@ nav .dropdown a:hover {
 .flex-row {
     display: flex;
     justify-content: space-around;
-}
-
-#home-main1 {
-    text-align: center;
-}
-
-#home-main1 h2 {
-    margin-bottom: 10px;
-}
-
-#home-main1 p {
-    font-family: var(--system-font);
-    font-size: 1.5rem;
-    padding: 0 20%;
-    margin-top: 0;
-}
-
-#home-main1 div {
-    margin: 10px 20px;
-}
-
-#home-main1-right {
-    flex: 1 1;
-    max-width: 300px;
-    background-image: url(../images/shot01.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-#home-main2 {
-    background-color: white;
-    padding: 50px;
-    column-gap: 5%;
-}
-
-#home-main2 > div {
-    display: flex;
-    flex: 1 1;
-    flex-direction: column;
-    align-items: center;
-    max-width: 300px;
-    row-gap: 20px;
-}
-
-#home-main2 img {
-    border-radius: 50%;
-    object-fit: cover;
-    aspect-ratio: 1/1;
-    max-width: 100%;
-}
-
-#home-main2 button {
-    width: 140px;
-    height: 55px;
-    border-radius: 10px;
-    font-size: 1.5rem;
-    background-color: var(--primary-bgcolor);
-    border-width: thin;
-}
-
-#home-main3 {
-    padding: 50px;
-    column-gap: 5%;
-    align-items: stretch;
-}
-
-#home-main3-1 {
-    flex: 1 1 40%;
-    background-image: url(../images/shot03.jpg);
-    background-size: cover;
-    background-position: center;
-    border-radius: 80px;
-}
-
-#home-main3-2 {
-    flex: 2 1 55%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-}
-
-#home-main3-2 h2 {
-    font-size: 2.5rem;
-    margin-bottom:15px;
-}
-
-#home-main3-2 p {
-    font-family: var(--system-font);
-    font-size: 1.5rem;
-    margin-top: 0;
-    padding-right: 30px;
-}
-
-#home-main3 button {
-    width: 200px;
-    height: 55px;
-    border-radius: 10px;
-    font-size: 1rem;
-    background-color: var(--secondary-bgcolor);
-    border-color: var(--dark-color);
-    border-width: thin;
-}
-
-#home-main4 iframe {
-    border: 0;
-}
-
-#home-main5 {
-    background-image: url("../images/shot05.jpg");
-    background-size: cover;
-    background-position: center;
-    height: 720px;
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-between;
-}
-
-#flow-with-us {
-    background-color: white;
-    opacity: 0.8;
-    margin-left: 5%;
-    margin-bottom: 5%;
-    padding: 1rem;
-    width: 210px;
-    border-radius: 30px;
-}
-
-#flow-with-us h2 {
-    font-size: 2rem;
-}
-
-#open-hours {
-    font-family: var(--system-font);
-    font-size: 1.5rem;
-    font-weight: bold;
-}
-
-#flow-with-us p {
-    font-family: var(--system-font);
-    font-size: 1.1rem;
-}
-
-#follow-us {
-    width: 150px;
-    margin-right: 5%;
-    margin-bottom: 5%;
-}
-
-#follow-us h3 {
-    font-family: var(--system-font);
-    color: white;
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-bottom: 5px;
-}
-
-#follow-us img {
-    width: 36px;
-}
-
-#follow-us a:hover {
-    opacity: 0.7;
-}
-
-.fa-brands, .fab {
-    font-size: 1.5rem;
-    color: white;
-    background-color: transparent;
-    padding: 3px;
-}
-
-.small-text {
-    font-size: 0.8rem;
-}
-
-button:hover {
-    opacity: 0.7;
 }
 
 #topBtn {
@@ -372,202 +144,6 @@ button:hover {
 
 #topBtn:hover {
     opacity: 0.7;
-}
-
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: var(--dark-color); /*fallback color */
-    background-color: rgb(0,0,0, 0.7);
-}
-
-#wechat-modal-content {
-    background-color: white;
-    position: relative;
-    width: fit-content;
-    padding: 20px;
-    margin: auto;
-    text-align: center;
-}
-
-#wechat-modal p {
-    font-family: var(--system-font);
-}
-
-#wechat-modal img {
-    border: 1px solid var(--dark-color);
-}
-
-#wechat-modal .close-btn {
-    position: absolute;
-    right: 0;
-    top: 0;
-}
-
-#about-main1 {
-    padding: 4rem 10%;
-    background-color: var(--light-bgcolor);
-    font-family: var(--system-font);
-    font-size: 1.5rem;
-}
-
-#team {
-    padding: 3% 5%;
-}
-
-#team h2 {
-    font-size: 3rem;
-    font-weight: 100;
-}
-
-#team .flex-row {
-    justify-content: space-between;
-}
-
-#team > .flex-row > div {
-    display: flex;
-    flex: 1 1;
-    flex-direction: column;
-    max-width: 330px;
-}
-
-#team > .flex-row img {
-    border-radius: 15%;
-    object-fit: cover;
-    aspect-ratio: 1.4/1;
-    max-width: 100%;
-}
-
-#team h4 {
-    font-size: 1.5rem;
-    font-weight: 100;
-    margin: 0;
-}
-
-#team p {
-    font-size: 1.2rem;
-    font-family: var(--system-font);
-    margin: 0;
-}
-
-#team a:hover {
-    text-decoration: underline; 
-}
-
-#winkie, #shirley {
-    background-color: var(--light-bgcolor);
-}
-
-.persona {
-    position: relative;
-    padding: 3% 5%;
-}
-
-.persona h3 {
-    font-size: 2.5rem;
-    font-weight: 100;
-    position: absolute;
-    top: 10px;
-}
-
-#salad h3 {
-    position: static;
-}
-
-.persona .flex-row {
-    column-gap: 5%;
-    align-items: stretch;
-}
-
-.persona .flex-row .left {
-    font-family: var(--system-font);
-    font-size: 1.2rem;
-    flex: 1 1 35%;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-}
-
-.persona .flex-row .left .filler {
-    height: 80px;
-}
-
-.persona .flex-row .left img {
-    width: 100%;
-    border-radius: 50%;
-    object-fit: cover;
-    aspect-ratio: 1/1;
-}
-
-.qualification {
-    text-decoration: underline;
-    font-weight: 100;
-    margin-bottom: 0;
-}
-
-.persona .flex-row .right {
-    flex: 2 1 60%;
-    font-family: var(--system-font);
-    font-size: 1.6rem;
-}
-
-/* services page */
-
-#physiotherapy, #gyrotonic {
-    background-color: var(--light-bgcolor);
-}
-
-#services section {
-    padding: 3% 3% 3% 6%;
-    width: 100vw;
-    box-sizing: border-box;
-}
-
-#services .flex-row {
-    align-items:center;
-    justify-content: space-between;
-    padding-right: 3%;
-}
-
-#services h2 {
-    font-size: 2rem;
-    font-weight: 100;
-}
-
-#services .template1 h2 {
-    padding-left: 54%;
-}
-
-#services .description {
-    font-family: var(--system-font);
-    font-size: 1.5rem;
-    line-height: 1.2;
-    width: 50%;
-    border-top-width: 1px;
-    border-top-style: solid;
-}
-
-#services .description p {
-    margin: 0;
-}
-
-#services .image {
-    width: 45%;
-}
-
-
-#services .image img {
-    width:100%;
-    aspect-ratio: 7/5;
-    object-fit: cover;
-    border-radius: 1.5rem;
 }
 
 footer {
