--- a/assets/index.css
+++ b/assets/index.css
@@ -27,6 +27,7 @@
 
 #home-title {
     text-align: center;
+    line-height: 1;
 }
 
 #home-title h1 {
@@ -41,8 +42,8 @@
 }
 
 #home-title button {
-    height: 60px;
-    font-size: 1rem;
+    height: 3.25rem;
+    font-size: 1.1rem;
     padding: 2px 16px;
     border-radius: 10px;
     border: 0;
@@ -181,12 +182,22 @@ main button {
 
 #flow-with-us h2 {
     font-size: 2rem;
+    margin-bottom: 0;
+}
+
+#flow-with-us h2 + p {
+    margin-top: 0.5rem;
 }
 
 #open-hours {
     font-family: var(--system-font);
     font-size: 1.5rem;
     font-weight: bold;
+    margin-bottom: 0;
+}
+
+#open-hours + p {
+    margin-top: 0.5rem;
 }
 
 #flow-with-us p {
