--- a/assets/index.css
+++ b/assets/index.css
@@ -7,6 +7,10 @@
     --special-font: "Moon-Time", cursive;
 }
 
+header {
+    background-color: var(--primary-bgcolor);
+}
+
 .video-container {
     position: relative;
 }
@@ -56,6 +60,7 @@ main button {
 
 #home-main1 {
     text-align: center;
+    background-color: var(--primary-bgcolor);
 }
 
 #home-main1 h2 {
@@ -71,6 +76,14 @@ main button {
 
 #home-main1 div {
     margin: 10px 20px;
+}
+
+#home-main1-left {
+    container-type: inline-size; /* prepare for cqw */
+}
+
+#home-main1-left h2 {
+    font-size: 5.6cqw;
 }
 
 #home-main1-right {
@@ -103,19 +116,17 @@ main button {
     max-width: 100%;
 }
 
-#home-main2 button {
-    width: 140px;
-    height: 55px;
-    border-radius: 10px;
+#home-main2 .btn {
+    width: 48%;
     font-size: 1.5rem;
     background-color: var(--primary-bgcolor);
-    border-width: thin;
 }
 
 #home-main3 {
     padding: 50px;
     column-gap: 5%;
     align-items: stretch;
+    background-color: var(--primary-bgcolor);
 }
 
 #home-main3-1 {
@@ -164,9 +175,8 @@ main button {
     background-image: url("../images/shot05.jpg");
     background-size: cover;
     background-position: center;
-    height: 720px;
+    height: 680px;
     display: flex;
-    align-items: flex-end;
     justify-content: space-between;
 }
 
@@ -174,9 +184,9 @@ main button {
     background-color: white;
     opacity: 0.8;
     margin-left: 5%;
-    margin-bottom: 5%;
     padding: 1rem;
-    width: 210px;
+    align-self: center;
+    width: calc(2rem + 210px);
     border-radius: 30px;
 }
 
@@ -209,6 +219,7 @@ main button {
     width: 150px;
     margin-right: 5%;
     margin-bottom: 5%;
+    align-self: flex-end;
 }
 
 #follow-us h3 {
@@ -273,4 +284,42 @@ main button {
     position: absolute;
     right: 0;
     top: 0;
+}
+
+@media only screen and (max-width: 481px) {
+
+    .video-container video {
+        height: 30rem;
+    }
+
+    #home-title h1 {
+        margin-top: calc(6.25rem - 10px);
+        font-size: 3.75rem;
+    }
+
+    #home-title h2 {
+        font-size: 1.75rem;
+    }
+
+    #home-main1-right {
+        display: none;
+    }
+
+    #home-main1 p {
+        font-size: 1rem;
+    }
+
+    #home-main2 {
+        display: block;
+    }
+
+    #home-main2>div {
+        position: relative;
+        justify-content: center;
+    }
+
+    #home-main2 .btn {
+        position: absolute;
+        bottom: 20px;
+    }
 }
