--- a/assets/faq.css
+++ b/assets/faq.css
@@ -2,8 +2,8 @@ main {
     line-height: 1.2;
 }
 
-section {
-    padding: 5%;
+main .content {
+    padding: 10%;
 }
 
 #faq {
@@ -56,4 +56,15 @@ p {
     h3 {
       text-decoration: underline;
     }
-  }
+}
+
+@media only screen and (max-width: 481px) {
+    h3 {
+        font-size: 1rem;
+    }
+
+    p {
+        font-size: 0.8rem;
+        line-height: 2;
+    }
+}
