--- a/assets/contact.css
+++ b/assets/contact.css
@@ -20,6 +20,56 @@ h3 {
     flex: 1 1 30%;
 }
 
+.fa-weixin {
+    font-size: 1.5rem;
+    color: white;
+    background-color: #18CC21;
+    padding: 3px;
+    border-radius: 50%;
+}
+
+#wechat:hover a p {
+    text-decoration: underline;
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: var(--dark-color); /*fallback color */
+    background-color: rgb(0,0,0, 0.7);
+}
+
+#wechat-modal-content {
+    background-color: white;
+    position: relative;
+    width: fit-content;
+    padding: 20px;
+    margin: auto;
+    text-align: center;
+}
+
+#wechat-modal p {
+    font-family: var(--system-font);
+}
+
+#wechat-modal img {
+    border: 1px solid var(--dark-color);
+}
+
+#wechat-modal .close-btn {
+    position: absolute;
+    right: 0;
+    top: 0;
+    border-radius: 15%;
+}
+
 @media only screen and (max-width: 481px) {
     .flex-row {
         display: block;
