--- a/assets/index.css
+++ b/assets/index.css
@@ -188,6 +188,8 @@ main button {
 
 #home-main4 iframe {
     border: 0;
+    width: 100%;
+    height: 600px;
 }
 
 #home-main5 {
@@ -333,7 +335,7 @@ main button {
     }
 
     #home-main1 div {
-        margin: 0.8vw 1.6vw;
+        padding: 2%;
     }
     
     #home-main1-right {
@@ -357,6 +359,7 @@ main button {
         bottom: 15vw;
         left: 0;
         right: 0;
+        font-size: 1rem;
     }
 
     #home-main3 > .flex-row {
