--- a/assets/styles.css
+++ b/assets/styles.css
@@ -243,14 +243,16 @@ footer {
 
     .dropdown {
         line-height: 1;
-        font-size: 1.25rem;
-        padding: 0 5%;
+        font-size: 1rem;
+        padding: 4px 5%;
     }
 
     #menu-sect.show {
         display: block;
         position: absolute;
-        top: 100px;
+        top: 90px;
+        width: 100%;
+        text-align: right;
     }
 
     #topBtn {
