--- a/assets/index.css
+++ b/assets/index.css
@@ -39,7 +39,7 @@ header {
 
 #home-title h1 {
     font-family: var(--special-font);
-    font-size: 5rem;
+    visibility: hidden;
     font-weight: 100;
     margin-bottom: 0;
 }
@@ -81,7 +81,7 @@ main button {
 #home-main1 p {
     font-family: var(--system-font);
     font-size: 1.5rem;
-    padding: 0 20%;
+    padding: 0 2%;
     margin-top: 0;
 }
 
@@ -180,7 +180,7 @@ main button {
     width: 200px;
     height: 55px;
     border-radius: 10px;
-    font-size: 1rem;
+    font-size: 1.5rem;
     background-color: var(--secondary-bgcolor);
     border-color: var(--dark-color);
     border-width: thin;
@@ -195,7 +195,7 @@ main button {
 #home-main5 {
     background-image: url("../images/shot05.jpg");
     background-size: cover;
-    background-position: center;
+    background-position: 50% 30%;
     margin-top: -10px; /* to remove gap on top */
 }
 
@@ -205,7 +205,8 @@ main button {
 }
 
 #flow-with-us {
-    background-color: white;
+    background-color: var(--light-bgcolor);
+    color: var(--dark-color4);
     opacity: 0.8;
     margin-left: 5%;
     padding: 1rem;
@@ -240,15 +241,20 @@ main button {
 }
 
 #follow-us {
-    width: 150px;
+    background-color: var(--light-bgcolor);
+    color: var(--dark-color4);
+    opacity: 0.8;
+    width: 180px;
+    padding-bottom: 1rem;
     margin-right: 5%;
     margin-bottom: 5%;
     align-self: flex-end;
+    border-radius: 20px;
+    text-align: center;
 }
 
 #follow-us h3 {
     font-family: var(--system-font);
-    color: white;
     font-size: 1.5rem;
     font-weight: bold;
     margin-bottom: 5px;
@@ -264,7 +270,6 @@ main button {
 
 .fa-brands, .fab {
     font-size: 1.5rem;
-    color: white;
     background-color: transparent;
     padding: 3px;
 }
