--- a/assets/styles.css
+++ b/assets/styles.css
@@ -77,9 +77,9 @@ a {
 }
 
 #header {
-    background-image: url(../images/bg.png);
+    background-image: url(../images/bg.jpg);
     background-size: cover;
-    background-position: 0 18%;
+    background-position: 50% 25%;
     position: relative;
 }
 
@@ -217,6 +217,7 @@ footer {
 
     #logo {
         margin-left: 3%;
+        max-width: 75vw; /* otherwise width varies when menu control is clicked */
     }
 
     #menu-control {
@@ -263,6 +264,10 @@ footer {
         height: 10vw;
     }
 
+    #header {
+        background-position: 50% 0%;
+    }
+
     #page-header {
         height: 150px;
     }
@@ -274,7 +279,7 @@ footer {
     }
 
     .copyright-area {
-        font-size: 0.9rem;
+        font-size: 0.8rem;
         text-align: center;
     }
 }
