--- a/assets/contact.css
+++ b/assets/contact.css
@@ -1,10 +1,15 @@
+:root {
+    --form-bgcolor: #ECE4DA;
+}
+
 main .content {
-    padding: 5%;
+    padding: 3% 5%;
     justify-content: space-between;
     column-gap: 5%;
 }
 
 main {
+    background-color: var(--primary-bgcolor);
     font-size: 1.25rem;
 }
 
@@ -16,8 +21,156 @@ h3 {
     color: var(--dark-color4);
 }
 
-.flex-row div {
+#contact-info .flex-row div {
     flex: 1 1 30%;
+}
+
+#contact-form {
+    background-color: var(--light-bgcolor);
+}
+
+#contact-form p {
+    padding-left: 3%;
+    font-size: 1.5rem;
+}
+
+#contact-form {
+    overflow-y: hidden; /* to preven bottom margin collapse of form */
+}
+
+#contact-form form {
+    padding: 3%;
+    max-width: 640px;
+    margin: auto;
+    background-color: var(--form-bgcolor);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1rem;
+    margin-bottom: 5%;
+}
+
+.form-group {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 1%;
+}
+
+.form-group label {
+    font-size: 0.75rem;
+}
+
+form>div:nth-child(n+3) {
+    padding-top: 0.5rem; /* some spacing between groups of controls from the third div*/
+}
+
+form input, textarea {
+    font-size: 1.25rem;
+    border-width: 1px;
+    background-color: var(--form-bgcolor);
+    padding: 0.5rem;
+}
+
+.pull-up {
+    margin-top: -0.5rem;
+}
+
+.half-width {
+    max-width: 49.5%; /* 50% triggers wrapping because of 1% column gap */
+    flex: 1 0 480px;
+}
+
+.half-width input {
+    width: 100%;
+}
+
+form>div {
+    width: 100%;
+}
+
+#first-name, #last-name, #email, #phone, #message {
+    border-radius: 1rem;
+}
+
+#email, #phone, #message {
+    width: 100%;
+}
+
+.options label {
+  display: inline-block;
+  position: relative;
+  padding-left: 1.5rem;
+  padding-right: 1rem;
+  margin-bottom: 0.25rem;
+  cursor: pointer;
+  font-size: 0.75rem;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.options input {
+    display: none;
+}
+
+/* Create a custom checkbox */
+.custom-checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 1rem;
+  width: 1rem;
+  background-color: var(--primary-bgcolor);
+  border: 1px solid black;
+}
+
+/* On mouse-over, add a grey background color */
+.options label:hover input ~ .custom-checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, apply a different background color*/
+.options label input:checked ~ .custom-checkmark {
+  background-color: var(--form-bgcolor);
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.custom-checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.options label input:checked ~ .custom-checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.options label .custom-checkmark:after {
+  left: 0.3rem;
+  top: 0.2rem;
+  width: 0.3rem;
+  height: 0.6rem;
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.comment {
+    color: grey;
+    font-size: 0.75rem;
+}
+
+#submit-button {
+    text-align: center;
+}
+
+#submit-button button {
+    width: 10rem;
+    background-color: var(--primary-bgcolor);
 }
 
 .fa-weixin {
@@ -74,6 +227,10 @@ h3 {
     .flex-row {
         display: block;
         text-align: center;
+    }
+
+    .half-width {
+        max-width: 100%;
     }
 
     .no-mobile {
