--- a/assets/contact.css
+++ b/assets/contact.css
@@ -120,7 +120,7 @@ form>div {
   left: 0;
   height: 1rem;
   width: 1rem;
-  background-color: var(--primary-bgcolor);
+  background-color: var(--form-bgcolor);
   border: 1px solid black;
   border-radius: 0.3rem;
 }
