--- a/assets/contact.css
+++ b/assets/contact.css
@@ -165,6 +165,10 @@ form>div {
     font-size: 0.75rem;
 }
 
+.consent-statement a {
+    text-decoration: underline;
+}
+
 #submit-button {
     text-align: center;
 }
@@ -172,6 +176,12 @@ form>div {
 #submit-button button {
     width: 10rem;
     background-color: var(--primary-bgcolor);
+}
+
+#submit-button button:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+    opacity: 0.6;
 }
 
 .fa-weixin {
